--- a/src/main/resources/templates/admin/error/404.html
+++ b/src/main/resources/templates/admin/error/404.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css" />
-    <title>Title</title>
+    <title>어사 - 잘못된 요청, 접근 입니다.</title>
     <style>
         .error-form {
             position: absolute;
