--- a/src/main/resources/templates/admin/sign/success.html
+++ b/src/main/resources/templates/admin/sign/success.html
@@ -48,8 +48,8 @@
 		<input type="hidden" th:value="${path}" class="path">
 		<span>서명이 완료되었습니다.</span>
 		<div class="btn-wrap">
-			<button type="button" class="btn-return" onclick="location.href='/'">홈</button>
-			<button type="button" class="btn-return">돌아가기</button>
+			<button type="button" class="btn-return" onclick="location.href='https://dowajo.co.kr'">홈</button>
+			<!-- <button type="button" class="btn-return">돌아가기</button> -->
 		</div>
 	</div>
 </body>
