[관리자] 업체관리 > 리뷰 페이지의 리뷰 관련 오류 수정

--- a/src/main/resources/templates/admin/company/report.html
+++ b/src/main/resources/templates/admin/company/report.html
@@ -180,7 +180,7 @@
                             </tr>
                             <tr>
                                 <td class="modal-th">처리일</td>
-                                <td class="modal-td r-state"></td>
+                                <td class="modal-td r-stateDate"></td>
                             </tr>
                             <tr>
                                 <td class="modal-th">내용</td>
