--- a/src/main/resources/templates/admin/board/request/list.html
+++ b/src/main/resources/templates/admin/board/request/list.html
@@ -335,8 +335,11 @@
                         })
                         .catch((err) => console.error(err));
                     }
-                    else {
+                    else if(data == null) {
                         alert("확인된 계약서가 없습니다.");
+                    }
+                    else {
+                        alert("알 수 없는 에러입니다.");
                     }
                 });
                 
