[관리자] 공지사항 css 수정

--- a/src/main/resources/templates/admin/board/notice/register.html
+++ b/src/main/resources/templates/admin/board/notice/register.html
@@ -13,7 +13,7 @@
 
             <div class="form form--sm form-register" style="height: 100%;">
 
-                <fieldset class="fieldset"  style="height: 100%;">
+                <fieldset class="fieldset"  style="margin-left: -38%; height: 100%;">
                     <div class="input-wrap" style="display: none;">
                         <label class="label">번호</label>
                         <input type="text" id="idx" class="input" spellcheck="false">
