--- a/src/main/resources/templates/admin/board/notice/details.html
+++ b/src/main/resources/templates/admin/board/notice/details.html
@@ -13,7 +13,7 @@
 
             <div class="form form--sm form-register" style="height: 100%;">
 
-                <fieldset class="fieldset"  style="height: 100%;">
+                <fieldset class="fieldset"  style="margin-left: -38%;  height: 100%;">
                     <div class="input-wrap">
                         <label class="label">공지 번호</label>
                         <input type="text" id="idx" class="input" th:value="${details.idx}" readonly />
