--- a/src/main/resources/templates/admin/board/request/list.html
+++ b/src/main/resources/templates/admin/board/request/list.html
@@ -315,7 +315,11 @@
                 })
                 .then(response => response.text())
                 .then(data => {
-                    if(data != "" || data != null) {
+                    console.log(`data: ${data}`);
+                    if(data == "" || data == null) {
+                        alert("확인된 계약서가 없습니다.");
+                    }
+                    else if(data != "" || data != null) {                        
                         // alert(data);
                         const contractURL = `https://api.modusign.co.kr/documents/${data}/embedded-view`;
                         fetch(contractURL, {
@@ -334,9 +338,6 @@
                             );
                         })
                         .catch((err) => console.error(err));
-                    }
-                    else if(data == null) {
-                        alert("확인된 계약서가 없습니다.");
                     }
                     else {
                         alert("알 수 없는 에러입니다.");
