--- a/src/main/resources/templates/admin/error/404.html
+++ b/src/main/resources/templates/admin/error/404.html
@@ -75,6 +75,7 @@
             <div class="error-contents">
                 <span>잘못된 url 주소를 입력하셨거나 찾을 수 없는 경로입니다.</span>
                 <span>올바른 주소로 입력하였는지 다시 한번 확인해 주세요.</span>
+                <span><a href="https://dowajo.co.kr">어사 메인으로 이동</a></span>
             </div>
             <!-- <div> -->
                 <!-- <button type="button" class="error-btn" th:onclick="|history.back()|">돌아가기</button> -->
