[관리자] 신고 상세에서 채팅페이지 js 수정, [서비스] 제휴협회, 마패업체 조회 query에 업체등록상태 반영

--- a/src/main/resources/templates/admin/board/report/list.html
+++ b/src/main/resources/templates/admin/board/report/list.html
@@ -199,12 +199,16 @@
                 fetch(url)
                     .then(response => response.text())
                     .then(data => {
-                        if(data == null) {
+                        if(data == null || data == "") {
                             alert("조건에 일치하는 채팅방이 없습니다.");
                         }
+                        else if(data != null || data != "") {
+                            alert("해당 채팅방으로 이동합니다.");                            
+                            // window.location.href=`/admin/manage/chat/details?roomId=${data}`;
+                        }
                         else {
-                            alert("해당 채팅방으로 이동합니다.");
-                            window.location.href=`/admin/manage/chat/details?roomId=${data}`;
+                            alert("시스템 오류입니다.");
+                            window.location.reload();
                         }
                     })
             })
