[관리자] 통계 수정중 상담건수, 의뢰건수, 의뢰 성공률, 의뢰 성사율 추가

--- a/src/main/resources/templates/admin/board/report/list.html
+++ b/src/main/resources/templates/admin/board/report/list.html
@@ -204,7 +204,7 @@
                         }
                         else if(data != null || data != "") {
                             alert("해당 채팅방으로 이동합니다.");                            
-                            // window.location.href=`/admin/manage/chat/details?roomId=${data}`;
+                            window.location.href=`/admin/manage/chat/details?roomId=${data}`;
                         }
                         else {
                             alert("시스템 오류입니다.");
