--- a/src/main/resources/templates/admin/company/chart.html
+++ b/src/main/resources/templates/admin/company/chart.html
@@ -34,9 +34,19 @@
                     <div class="w-chart-top">
                         <div class="w-chart-count">
                             <div class="w-label-wrap">
-                                <span class="w-label">의뢰건수</span>
+                                <span class="w-label">상담건수: </span>
+                                <span class="requestConsultCount"></span>
+                                <span class="w-label">의뢰건수: </span>
                                 <span class="requestCount"></span>
+                                <span class="w-label">의뢰 성공: </span>
+                                <span class="requestSuccessRate"></span>
+                                <span class="w-label">의뢰 성사율: </span>
+                                <span class="requestAcceptRate"></span>
                             </div>
+                        </div>
+                        <div class="">
+                            <input type="checkbox" id="viewAVG" class="viewAVG" name="viewAVG" />
+                            <label for="viewAVG">전체 평균 보기</label>
                         </div>
                     </div>
 
