[관리자] 통계 일부 추가 버전 jar 빌드

--- a/src/main/resources/templates/admin/company/chart.html
+++ b/src/main/resources/templates/admin/company/chart.html
@@ -38,7 +38,7 @@
                                 <span class="requestConsultCount"></span>
                                 <span class="w-label">의뢰건수: </span>
                                 <span class="requestCount"></span>
-                                <span class="w-label">의뢰 성공: </span>
+                                <span class="w-label">의뢰 성공률: </span>
                                 <span class="requestSuccessRate"></span>
                                 <span class="w-label">의뢰 성사율: </span>
                                 <span class="requestAcceptRate"></span>
