[관리자] 업체 통계 backup Data 반영

--- a/src/main/resources/templates/admin/board/chart/whole.html
+++ b/src/main/resources/templates/admin/board/chart/whole.html
@@ -17,13 +17,23 @@
 
                     <div class="w-chart-top">
                         <div class="w-chart-count">
-                            <div class="w-label-wrap">
+                            <!-- <div class="w-label-wrap">
                                 <span class="w-label">업체개수</span>
                                 <span th:text="|${company} 개|"></span>
                             </div>
                             <div class="w-label-wrap">
                                 <span class="w-label">의뢰건수</span>
                                 <span class="requestCount"></span>
+                            </div> -->
+                            <div class="w-label-wrap">
+                                <span class="w-label">상담건수: </span>
+                                <span class="requestConsultCount"></span>
+                                <span class="w-label">의뢰건수: </span>
+                                <span class="requestCount"></span>
+                                <span class="w-label">의뢰 성공률: </span>
+                                <span class="requestSuccessRate"></span>
+                                <span class="w-label">의뢰 성사율: </span>
+                                <span class="requestAcceptRate"></span>
                             </div>
                         </div>
                     </div>
