[관리자] 업체 통계 그래프 작업중...

--- a/src/main/resources/templates/admin/company/chart.html
+++ b/src/main/resources/templates/admin/company/chart.html
@@ -110,6 +110,11 @@
         window.addEventListener('load', function () {
             highlightMenu('list');
             createChart('company');
+
+            const viewAVGBtn = document.querySelector("#viewAVG");
+            viewAVGBtn.addEventListener("click", () => {
+                createChartAllData();
+            })
         });
     </script>
 </th:block>
