--- a/src/main/resources/templates/admin/company/chart.html
+++ b/src/main/resources/templates/admin/company/chart.html
@@ -54,10 +54,16 @@
                         <div class="chart-age">
                             <div class="age-wrap">
                                 <span class="w-label">연령별 통계</span>
+                                <span class="w-label">성별: </label>
+                                <select id="ageChartGender" name="ageChartGender">
+                                    <option value="1">전체</option>
+                                    <option value="2">남</option>
+                                    <option value="3">여</option>
+                                </select>
                             </div>
                             <div class="chart-wrap-sm">
                                 <canvas id="ageChart"></canvas>
-                            </div>
+                            </div>                           
                         </div>
 
                         <div class="chart-time">
@@ -114,7 +120,12 @@
             const viewAVGBtn = document.querySelector("#viewAVG");
             viewAVGBtn.addEventListener("click", () => {
                 createChartAllData();
-            })
+            });
+
+            const ageChartGenderSelect = document.querySelector("#ageChartGender");
+            ageChartGenderSelect.addEventListener("change", (e) => {
+                reloadAgeChart(e.target.value);
+            });
         });
     </script>
 </th:block>
