[관리자] 업체관리 업체 프로필 이미지 다운로드 추가(50%)

--- a/src/main/resources/templates/admin/company/details.html
+++ b/src/main/resources/templates/admin/company/details.html
@@ -60,7 +60,7 @@
                                             </div>
                                         </div>
                                         <button>
-                                            <a id="companyProfileImageDownBtn" th:href="${details.companysProfileImage}">보기</a>
+                                            <a id="companyProfileImageDownBtn" th:href="${details.companysProfileImage}" target="_blank">보기</a>
                                         </button>
                                     </td>
                                     <div class="company-description-wrap">                                   
