[관리자] 의뢰내역 관리에서 의뢰내역 상태 상담취소, 의뢰취소, 계약취소 추가

--- a/src/main/resources/templates/admin/board/request/list.html
+++ b/src/main/resources/templates/admin/board/request/list.html
@@ -18,8 +18,10 @@
                             <form class="table__search">
                                 <select class="select" name="state">
                                     <option value="" th:selected="${state} eq ''">전체</option>
+                                    <option value="상담취소" th:selected="${state} eq '상담취소'">상담취소</option>
                                     <option value="상담대기" th:selected="${state} eq '상담대기'">상담대기</option>
                                     <option value="상담완료" th:selected="${state} eq '상담완료'">상담완료</option>
+                                    <option value="의뢰취소" th:selected="${state} eq '의뢰취소'">의뢰취소</option>
                                     <option value="의뢰대기" th:selected="${state} eq '의뢰대기'">의뢰대기</option>
                                     <option value="의뢰거절" th:selected="${state} eq '의뢰거절'">의뢰거절</option>
                                     <option value="계약진행" th:selected="${state} eq '계약진행'">계약진행</option>
@@ -174,51 +176,7 @@
                                         <!-- <div class="dt-check-wrap"> -->
                                             <!-- <input type="checkbox" id="r-category2" name="r-category" value="기업문제"> -->
                                             <!-- <label for="r-category2">기업문제</label> -->
-                                        <!-- </div> -->
-                                        <!-- <div class="dt-check-wrap"> -->
-                                            <!-- <input type="checkbox" id="r-category3" name="r-category" value="안전분야 조사"> -->
-                                            <!-- <label for="r-category3">안전분야 조사</label> -->
-                                        <!-- </div> -->
-                                        <!-- <div class="dt-check-wrap"> -->
-                                            <!-- <input type="checkbox" id="r-category4" name="r-category" value="사기/분쟁"> -->
-                                            <!-- <label for="r-category4">사기/분쟁</label> -->
-                                        <!-- </div> -->
-                                        <!-- <div class="dt-check-wrap"> -->
-                                            <!-- <input type="checkbox" id="r-category5" name="r-category" value="스토킹"> -->
-                                            <!-- <label for="r-category5">스토킹</label> -->
-                                        <!-- </div> -->
-                                        <!-- <div class="dt-check-wrap"> -->
-                                            <!-- <input type="checkbox" id="r-category6" name="r-category" value="의료/보험"> -->
-                                            <!-- <label for="r-category6">의료/보험</label> -->
-                                        <!-- </div> -->
-                                        <!-- <div class="dt-check-wrap"> -->
-                                            <!-- <input type="checkbox" id="r-category7" name="r-category" value="부동산"> -->
-                                            <!-- <label for="r-category7">부동산</label> -->
-                                        <!-- </div> -->
-                                        <!-- <div class="dt-check-wrap"> -->
-                                            <!-- <input type="checkbox" id="r-category8" name="r-category" value="금융/사이버"> -->
-                                            <!-- <label for="r-category8">금융/사이버</label> -->
-                                        <!-- </div> -->
-                                        <!-- <div class="dt-check-wrap"> -->
-                                            <!-- <input type="checkbox" id="r-category9" name="r-category" value="민원대행"> -->
-                                            <!-- <label for="r-category9">민원대행</label> -->
-                                        <!-- </div> -->
-                                        <!-- <div class="dt-check-wrap"> -->
-                                            <!-- <input type="checkbox" id="r-category10" name="r-category" value="불법기기탐지"> -->
-                                            <!-- <label for="r-category10">불법기기탐지</label> -->
-                                        <!-- </div> -->
-                                        <!-- <div class="dt-check-wrap"> -->
-                                            <!-- <input type="checkbox" id="r-category11" name="r-category" value="경호/경비"> -->
-                                            <!-- <label for="r-category11">경호/경비</label> -->
-                                        <!-- </div> -->
-                                        <!-- <div class="dt-check-wrap"> -->
-                                            <!-- <input type="checkbox" id="r-category12" name="r-category" value="일반조사"> -->
-                                            <!-- <label for="r-category12">일반조사</label> -->
-                                        <!-- </div> -->
-                                        <!-- <div class="dt-check-wrap"> -->
-                                            <!-- <input type="checkbox" id="r-category13" name="r-category" value="해외조사"> -->
-                                            <!-- <label for="r-category13">해외조사</label> -->
-                                        <!-- </div> -->
+                                        <!-- </div> -->                                       
                                     <!-- </div> -->
                                 </td>
                             </tr>
@@ -227,10 +185,13 @@
                                 <td class="modal-td">
                                     <div class="select-wrap">
                                         <select class="select select-sm r-state">
+                                            <option value="상담취소">상담취소</option>
                                             <option value="상담대기">상담대기</option>
                                             <option value="상담완료">상담완료</option>
+                                            <option value="의뢰취소">의뢰취소</option>
                                             <option value="의뢰대기">의뢰대기</option>
                                             <option value="의뢰거절">의뢰거절</option>
+                                            <option value="계약취소">계약취소</option>
                                             <option value="계약진행">계약진행</option>
                                             <option value="임무진행">임무진행</option>
                                             <option value="임무완료">임무완료</option>
