[서비스] CLIENT 임무 요청 시 modal 작성부분 수정(2)

--- a/src/main/resources/templates/admin/board/request/list.html
+++ b/src/main/resources/templates/admin/board/request/list.html
@@ -24,7 +24,9 @@
                                     <option value="의뢰취소" th:selected="${state} eq '의뢰취소'">의뢰취소</option>
                                     <option value="의뢰대기" th:selected="${state} eq '의뢰대기'">의뢰대기</option>
                                     <option value="의뢰거절" th:selected="${state} eq '의뢰거절'">의뢰거절</option>
+                                    <option value="계약취소" th:selected="${state} eq '계약취소'">계약취소</option>
                                     <option value="계약진행" th:selected="${state} eq '계약진행'">계약진행</option>
+                                    <option value="임무취소" th:selected="${state} eq '임무취소'">임무취소</option>
                                     <option value="임무진행" th:selected="${state} eq '임무진행'">임무진행</option>
                                     <option value="임무완료" th:selected="${state} eq '임무완료'">임무완료</option>
                                 </select>
@@ -193,6 +195,7 @@
                                             <option value="의뢰거절">의뢰거절</option>
                                             <option value="계약취소">계약취소</option>
                                             <option value="계약진행">계약진행</option>
+                                            <option value="임무취소">임무취소</option>
                                             <option value="임무진행">임무진행</option>
                                             <option value="임무완료">임무완료</option>
                                         </select>
